[metadata]
name = bmds
version = attr: bmds.version.__version__
description = A Python interface for the US EPA Benchmark dose modeling software (BMDS)
long_description = file: README.rst
author = Andy Shapiro
author_email = shapiromatron@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    matplotlib
    numpy
    openpyxl
    pandas
    pydantic
    python-docx
    requests
    scipy
    simple-settings
    tabulate
    tqdm

[options.entry_points]
console_scripts =
    bmds-priors-report = bmds.cli.priors_report:main

[options.extras_require]
benchmarks =
    SQLAlchemy

[flake8]
extend-exclude = build,dist,docs,notebooks,venv
max-line-length = 100
ignore = E203,E266,E501,W503
