[metadata]
name = bmds
version = attr: bmds.version.__version__
description = A Python interface for the USEPA Benchmark dose modeling software (BMDS)
long_description = file: README.rst
author = Andy Shapiro
author_email = shapiromatron@gmail.com
license = MIT
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
project_urls =
    Documentation = https://bmds.readthedocs.io/
    Changes = https://github.com/shapiromatron/bmds/blob/main/docs/docs/history.md
    Code = https://github.com/shapiromatron/bmds
    Issue Tracker = https://github.com/shapiromatron/bmds/issues
    Download = https://pypi.org/project/bmds/

[options]
zip_safe = False
include_package_data = True
packages = find:
requires_python = ">=3.11"
install_requires =
    matplotlib
    numpy
    openpyxl
    pandas
    pydantic<2
    python-docx
    scipy
    simple-settings
    tabulate
    tqdm

[options.entry_points]
console_scripts =
    bmds-priors-report = bmds.cli.priors_report:main

[options.extras_require]
benchmarks =
    SQLAlchemy>1.4,<2

[options.packages.find]
exclude = tests*
